# openapi-eller

./: Cargo.toml  TODO.md  package-lock.json
examples/: debug-print.rs  generate.rs
src/: generate.rs  index.ts  json_pointer.rs  lib.rs  schemas.rs  unref.rs  visitor.ts
src/generate/: rust.rs
src/generate/rust/: schema.rs  types.rs
src/generate/rust/schema/: collect.rs  impls.rs  test_schema.rs  test_types.rs  tests.rs  types.rs
src/generate/rust/schema/snapshots/: test_schema__nested_schema.snap  test_schema__schema_one_of.snap  test_schema__schema_ref.snap  test_schema__simple_schema.snap  test_schema__string_enum.snap  test_types__data_enum.snap  test_types__plain_enum.snap  test_types__simple_struct.snap  tests__data_enum.snap  tests__data_enum.snap.new  tests__plain_enum.snap  tests__simple_struct.snap  tests__simple_struct.snap.new
src/targets/: index.ts
src/targets/rust/: api.hbs  index.ts  reserved-words.txt  types.yaml
src/types/: index.ts
tests/: generate.rs  weirdness.yml
tests/fixtures/: pahkat.yml
tests/test-package/: Cargo.toml
